--- a/Liusse/Templates/JournalPanel.xaml
+++ b/Liusse/Templates/JournalPanel.xaml
@@ -16,7 +16,8 @@
         <ListBox Grid.Row="0" ItemsSource="{Binding Journal}"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  VirtualizingPanel.ScrollUnit="Pixel" BorderThickness="0"
-                 Margin="4" Background="Transparent">
+                 Margin="4" Background="Transparent"
+                 ItemContainerStyle="{StaticResource JournalItemStyle}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -25,13 +26,15 @@
                             <RowDefinition Height="7*"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Row="0" VerticalAlignment="Center" 
+                        <TextBlock Grid.Row="0" VerticalAlignment="Center"
+                                   HorizontalAlignment="Right"
                                    TextAlignment="Right" FontSize="13"
                                    TextWrapping="Wrap" Margin="0,0,0,6"
                                    Text="{Binding Path=Example}"
                                    Opacity="0.8"/>
 
                         <TextBlock Grid.Row="1" VerticalAlignment="Top"
+                                   HorizontalAlignment="Right"
                                    TextAlignment="Right" FontSize="22"
                                    TextWrapping="Wrap"
                                    Text="{Binding Path=Result}"/>
@@ -44,8 +47,9 @@
         <!--#region Кнопка очистить журнал-->
         <Button Grid.Row="1" Template="{StaticResource PanelButton}"
                 HorizontalAlignment="Right" Width="35" Height="35"
-                Padding="2,5,4,5" Background="{StaticResource MainColor}"
-                Focusable="False" Command="{Binding ClearJournalCommand}">
+                Padding="2,5,4,5" Focusable="False"
+                Background="{StaticResource MainColor}"
+                Command="{Binding ClearJournalCommand}">
             <Path SnapsToDevicePixels="True" 
                   Data="{StaticResource TrashCanSymbol}"/>
         </Button>
