--- a/Liusse/Templates/JournalPanel.xaml
+++ b/Liusse/Templates/JournalPanel.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
 
         <!--#region Список журнала-->
-        <ListBox Grid.Row="0" ItemsSource="{Binding Journal}"
+        <ListBox x:Name="Journal" Grid.Row="0" ItemsSource="{Binding Journal}"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  VirtualizingPanel.ScrollUnit="Pixel" BorderThickness="0"
                  Margin="4" Background="Transparent"
