--- a/Liusse/Resources/Controls.xaml
+++ b/Liusse/Resources/Controls.xaml
@@ -325,4 +325,30 @@
     <!--#endregion-->
     
     <!--#endregion-->
+    
+    <!--#region Информационный текст-->
+    <Style TargetType="TextBlock" x:Key="InfoText">
+        <Setter Property="Margin" Value="0,0,0,10"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" 
+                    Value="{DynamicResource SecondaryTextColor}"/>
+    </Style>
+    <!--#endregion-->
+    
+    <!--#region Ссылка-->
+    <Style TargetType="TextBlock" x:Key="Link">
+        <Setter Property="Margin" Value="0,0,0,4"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="TextDecorations" Value="Underline"/>
+        <Setter Property="Foreground" 
+                    Value="{DynamicResource SecondaryTextColor}"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" 
+                            Value="{DynamicResource PrimaryTextColor}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <!--#endregion-->
 </ResourceDictionary>
