--- a/Liusse/View/MainWindow.xaml
+++ b/Liusse/View/MainWindow.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         Title="Liusse" MinHeight="350" MinWidth="250"
         Height="500" Width="350" Background="{DynamicResource MainColor}"
+        BorderBrush="{DynamicResource MainColor}"
         KeyDown="KeyInput" KeyUp="Key_Shortcut" Closing="WindowClosing" 
         Closed="WindowClosed">
 
